# shinobi-python

./: CHANGELOG.md  README.md  pyproject.toml
src/shinobi_python/: Shinobi.py
src/shinobi_python/models/: apikey.py  monitor.py
